<resources>
    <string name="app_name">Weather Assistant</string>
    <string name="app_version" translatable="false">1.0.0</string>
    <string name="navi_weatherForecast">Weather Forecast</string>
    <string name="navi_stormyMap">Stormy Map</string>
    <string name="navi_stormSearch">Storm Search</string>
    <string name="navi_planTheTrip">Plan The Trip</string>
    <string name="navi_notifications">Notifications</string>
    <string name="navi_about">About</string>
    <string name="gps_disabled_alert">It is required that the GPS module is on. Activate it now?</string>
    <string name="search_enterCity">Enter city</string>
    <string name="coord_N">North</string>
    <string name="coord_NE">North-East</string>
    <string name="coord_E">East</string>
    <string name="coord_SE">South-East</string>
    <string name="coord_S">South</string>
    <string name="coord_SW">South-West</string>
    <string name="coord_W">West</string>
    <string name="coord_NW">North-West</string>
    <string name="word_updateTime">Updated at</string>
    <string name="word_details">Details</string>
    <string name="word_humidity">Humidity</string>
    <string name="word_pressure">Pressure</string>
    <string name="word_wind">Wind</string>
    <string name="word_windSpeed">Speed</string>
    <string name="word_windDirection">Direction</string>
    <string name="word_cloudiness">Cloudiness</string>
    <string name="word_visibility">Visibility</string>
    <string name="word_sunrise">Sunrise</string>
    <string name="word_sunset">Sunset</string>
    <string name="word_storms">Storms</string>
    <string name="word_frost">Frost</string>
    <string name="word_rain">Rain</string>
    <string name="word_tornado">Tornado</string>
    <string name="word_heat">Heat</string>
    <string name="word_period">Period:</string>
    <string name="word_from">From: </string>
    <string name="word_to">To: </string>
    <string name="word_degree_of_danger"> degree of danger</string>
    <string name="word_route">Route</string>
    <string name="word_time">Time</string>
    <string name="word_number">Number</string>
    <string name="word_distance">Distance</string>
    <string name="word_direction">Direction</string>
    <string name="word_yes">Yes</string>
    <string name="word_no">No</string>
    <string name="word_version">Version</string>
    <string name="Settings_yourLocation">Your location</string>
    <string name="Settings_stormNotifications">Storm notifications</string>
    <string name="Settings_weatherAlertNotifications">Weather alert notifications</string>
    <string name="word_radius">Radius</string>
    <string name="Settings_enteredCity">Entered City</string>
    <string name="word_city">City</string>
    <string name="word_confirm">Confirm</string>
    <string name="StormyMap_mapOfPoland">Map of Poland</string>
    <string name="StormyMap_mapOfEurope">Map of Europe</string>
    <string name="StormyMap_mapType">Map Type</string>
    <string name="StormyMap_staticMap">Static</string>
    <string name="StormyMap_animatedMap">Animated</string>
    <string name="StormyMap_magnification">Magnification</string>
    <string name="StormyMap_magnification_without">without</string>
    <string name="StormyMap_magnification_northwest">northwest</string>
    <string name="StormyMap_magnification_northeast">northeast</string>
    <string name="StormyMap_magnification_center">center</string>
    <string name="StormyMap_magnification_southwest">southwest</string>
    <string name="StormyMap_magnification_southeast">southeast</string>
    <string name="StormyMap_magnification_europe">europe</string>
    <string name="StormyMap_magnification_austria">Austria</string>
    <string name="StormyMap_magnification_belgiumNetherlandsLuxembourg">Belgium,Netherlands and Luxembourg</string>
    <string name="StormyMap_magnification_bosniaAndHerzegovinaCroatiaSlovenia">Bosnia and Herzegovina, Croatia, Slovenia</string>
    <string name="StormyMap_magnification_czech">Czech</string>
    <string name="StormyMap_magnification_france">France</string>
    <string name="StormyMap_magnification_greece">Greece</string>
    <string name="StormyMap_magnification_SpainPortugal">Spain, Portugal</string>
    <string name="StormyMap_magnification_german">German</string>
    <string name="StormyMap_magnification_slovakiaHungary">Slovakia, Hungary</string>
    <string name="StormyMap_magnification_switzerlandLiechtenstein">Switzerland, Liechtenstein</string>
    <string name="StormyMap_magnification_italian">Italian</string>
    <string name="StormyMap_magnification_britishIsles">British Isles</string>
    <string name="StormyMap_options">Options</string>
    <string name="StormyMap_option_showDirectionAndSpeed">Show the direction and speed of storm clouds in km / h on the map (beta)</string>
    <string name="StormyMap_option_showGroupsAndStormsNumber">Show groups and the number of atmospheric discharges on the map (beta)</string>
    <string name="StormSearch_no_warnings">No warnings here</string>
    <string name="Settings_alert_cityNotEntered">The city name has not been entered.</string>
    <string name="Setting_updatesFrequency">Frequency of updates</string>
    <string name="Settings_cancel">Cancel</string>
    <string name="PlanTheTrip_hour">hour</string>
    <string name="PlanTheTrip_min">min</string>
    <string name="PlanTheTrip_km">km</string>
    <string name="PlanTheTrip_m">m</string>
    <string name="PlanTheTrip_navigate">Navigate</string>
    <string name="PlanTheTrip_origin">Origin</string>
    <string name="PlanTheTrip_destination">Destination</string>
    <string name="PlanTheTrip_risk_none">No risk</string>
    <string name="PlanTheTrip_risk_moderate">Moderate risk</string>
    <string name="PlanTheTrip_risk_high">High risk</string>
    <string name="PlanTheTrip_risk_none_storm_walking_and_cycle">No lightning in the area</string>
    <string name="PlanTheTrip_risk_high_storm_walking_and_cycle">Lightning detected in the area</string>
    <string name="PlanTheTrip_risk_none_warnings_walking_and_cycle">No weather warnings in the area</string>
    <string name="PlanTheTrip_risk_high_warnings_storms_degree1_walking_and_cycle">Thunderstorms, 1st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_storms_degree2_walking_and_cycle">Thunderstorms, 2st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_storms_degree3_walking_and_cycle">Thunderstorms, 3st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_tornado_degree1_walking_and_cycle">Tornado, 1st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_tornado_degree2_walking_and_cycle">Tornado, 2st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_tornado_degree3_walking_and_cycle">Tornado, 3st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_rain_degree1_walking_and_cycle">Rain, 1st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_rain_degree2_walking_and_cycle">Rain, 2st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_rain_degree3_walking_and_cycle">Rain, 3st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_wind_degree1_walking_and_cycle">Wind, 1st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_wind_degree2_walking_and_cycle">Wind, 2st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_wind_degree3_walking_and_cycle">Wind, 3st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_heat_degree1_walking_and_cycle">Heat, 1st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_heat_degree2_walking_and_cycle">Heat, 2st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_heat_degree3_walking_and_cycle">Heat, 3st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_frost_degree1_walking_and_cycle">Frost, 1st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_frost_degree2_walking_and_cycle">Frost, 2st degree warning</string>
    <string name="PlanTheTrip_risk_high_warnings_frost_degree3_walking_and_cycle">Frost, 3st degree warning</string>
    <string name="PlanTheTrip_risk_none_temperature_walking_and_cycle">Temperature in the norm</string>
    <string name="PlanTheTrip_risk_moderate_temperature_walking_and_cycle">Temperature within normal limits</string>
    <string name="PlanTheTrip_risk_high_temperature_walking_and_cycle">Temperature above the norm</string>
    <string name="PlanTheTrip_risk_none_cloudiness_walking_and_cycle">Low cloudiness</string>
    <string name="PlanTheTrip_risk_moderate_cloudiness_walking_and_cycle">Moderate cloudiness</string>
    <string name="PlanTheTrip_risk_high_cloudiness_walking_and_cycle">High cloudiness</string>
    <string name="PlanTheTrip_risk_none_wind_speed_walking_and_cycle">Weak wind</string>
    <string name="PlanTheTrip_risk_moderate_wind_speed_walking_and_cycle">Moderate wind</string>
    <string name="PlanTheTrip_risk_high_wind_speed_walking_and_cycle">Strong wind</string>
    <string name="PlanTheTrip_risk_none_visibility_walking_and_cycle">Good visibility</string>
    <string name="PlanTheTrip_risk_moderate_visibility_walking_and_cycle">Moderate visibility</string>
    <string name="PlanTheTrip_risk_high_visibility_walking_and_cycle">Poor visibility</string>
    <string name="About_sources">Data sources</string>
    <string name="word_minutes">minutes</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoia2FsaW5lYyIsImEiOiJjam1taWhiZDUwaHhnM2twYm4wZzV5cHFjIn0.NTnV11b82zHlFdXU998L7Q</string>
    <string name="burzedzisnet_access_token" translatable="false">3f04fbcac562e34c59d03cc166dc532a9451ded3</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="warning_storm_description1">Rain from 15 to 40 mm\nWind in gusts from 60 to 90 km/h\nHail below 2 cm</string>
    <string name="warning_storm_description2">Rain from 41 to 70 mm\nWind in gusts from 91 to 110 km/h\nHail from 2 to 5 cm</string>
    <string name="warning_storm_description3">Rain above 70 mm\nWind in gusts over 110 km/h\nHail above 5 cm</string>
    <string name="warning_wind_description1">In gusts from 70 to 90 km/h</string>
    <string name="warning_wind_description2">In gusts from 91 to 110 km/h</string>
    <string name="warning_wind_description3">In gusts above 100 km/h</string>
    <string name="warning_rain_description1">Rain from 25 to 40 mm\nin 24 hours\nor\nSnow from 10 to 15 cm\nin 24 hours</string>
    <string name="warning_rain_description2">Rain from 41 to 70 mm\nin 24 hours\nor\nSnow from 16 to 30 cm\nin 24 hours\nor\nSnow from 10 to 15 cm\nin 12 hours</string>
    <string name="warning_rain_description3">Rain above 70 mm\nin 24 hours\nor\nSnow above 30 cm\nin 24 hours\nor\nSnow above 15 cm\nin 12 hours</string>
    <string name="warning_tornado_description1">Low risk</string>
    <string name="warning_tornado_description2">Moderate risk</string>
    <string name="warning_tornado_description3">High risk</string>
    <string name="warning_frost_description1">From -20 to -25 °C</string>
    <string name="warning_frost_description2">From -26 to -30 °C</string>
    <string name="warning_frost_description3">Below -30 °C</string>
    <string name="warning_heat_description1">From 30 to 34 °C</string>
    <string name="warning_heat_description2">From 35 to 38 °C</string>
    <string name="warning_heat_description3">Above 38 °C</string>
    <string name="error_gps_update_location">Problem with location update</string>
</resources>
