<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/navi_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_WeatherForecast"
            android:title="@string/navi_weatherForecast" />
        <item
            android:id="@+id/nav_StormyMap"
            android:title="@string/navi_stormyMap" />
        <item
            android:id="@+id/nav_StormSearch"
            android:title="@string/navi_stormSearch" />
        <item
            android:id="@+id/nav_PlanTheTrip"
            android:title="@string/navi_planTheTrip" />
        <item
            android:id="@+id/nav_Settings"
            android:title="@string/navi_notifications" />
    </group>
    <group
        android:id="@+id/navi_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_About"
            android:title="@string/navi_about"/>
    </group>
</menu>