<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.StormyMap">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView_stormyMap_menu"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        card_view:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton_stormyMap_displayMapSettings"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_settings" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView_stormyMap_mapSettings"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"
        card_view:cardCornerRadius="1dp"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton_stormyMap_options_exit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:src="@drawable/if_close"/>

            <ToggleButton
                android:id="@+id/toggleButton_stormyMap_mapChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageButton_stormyMap_options_exit"
                android:textOff="@string/StormyMap_mapOfPoland"
                android:textOn="@string/StormyMap_mapOfEurope"/>

            <TextView
                android:id="@+id/textView_stormyMap_mapType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/toggleButton_stormyMap_mapChange"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:text="@string/StormyMap_mapType"/>

            <RadioGroup
                android:id="@+id/radioGroup_stormyMap_mapType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/textView_stormyMap_mapType">

                <RadioButton
                    android:id="@+id/radioButton_stormyMap_staticMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/StormyMap_staticMap"/>

                <RadioButton
                    android:id="@+id/radioButton_stormyMap_animatedMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/StormyMap_animatedMap"/>
            </RadioGroup>

            <TextView
                android:id="@+id/textView_stormyMap_magnification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/radioGroup_stormyMap_mapType"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:text="@string/StormyMap_magnification"/>

            <Spinner
                android:id="@+id/spinner_stormyMap_magnification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_stormyMap_magnification">
            </Spinner>

            <TextView
                android:id="@+id/textView_stormyMap_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner_stormyMap_magnification"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:text="@string/StormyMap_options"/>

            <CheckBox
                android:id="@+id/checkBox_stormyMap_showDirectionAndSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_stormyMap_options"
                android:textSize="15dp"
                android:text="@string/StormyMap_option_showDirectionAndSpeed"/>

            <CheckBox
                android:id="@+id/checkBox_stormyMap_showGroupsAndStormsNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBox_stormyMap_showDirectionAndSpeed"
                android:textSize="15dp"
                android:text="@string/StormyMap_option_showGroupsAndStormsNumber"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/photoView_stormyMap_mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>